[package]
name = "obstacle-location"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = "0.3.13"
opencv = { version = "0.97.2", features = ["videoio", "imgcodecs"] }
anyhow = "1.0"
nalgebra = "0.32" # 强大的矩阵运算库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"